<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
              a:layout_width="fill_parent"
              a:layout_height="fill_parent"
              a:orientation="vertical"
        >
    <TextView a:id="@+id/add_pricing_instructions"
              a:layout_height="wrap_content"
              a:layout_width="fill_parent"
              a:text="@string/add_pricing_instructions_initial"
              a:textSize="20sp"
              a:textStyle="bold"
              a:padding="5sp"
            />
    <RelativeLayout a:layout_height="wrap_content" a:layout_width="fill_parent">
        <TextView a:id="@+id/add_pricing_spinner_label"
                  a:layout_height="wrap_content"
                  a:layout_width="wrap_content"
                  a:text="@string/add_pricing_spinner_label"
                  a:padding="2sp"
                  a:gravity="center"
                />
        <Spinner a:id="@+id/add_pricing_drink_spinner"
                 a:layout_height="wrap_content"
                 a:layout_width="fill_parent"
                 a:layout_toRightOf="@id/add_pricing_spinner_label"
                />
    </RelativeLayout>
    <RelativeLayout a:layout_height="wrap_content" a:layout_width="fill_parent">
        <TextView a:id="@+id/add_pricing_price_label"
                  a:layout_height="wrap_content"
                  a:layout_width="wrap_content"
                  a:text="@string/add_pricing_price_label"
                  a:padding="2sp"
                  a:gravity="center"
                />
        <EditText a:id="@+id/add_pricing_price"
                  a:layout_height="wrap_content"
                  a:layout_width="fill_parent"
                  a:layout_toRightOf="@id/add_pricing_price_label"
                  a:inputType="numberDecimal"
                  a:imeOptions="actionDone"
                />
    </RelativeLayout>
    <Button a:id="@+id/add_pricing_btn_confirm"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:gravity="center"
            a:text="@string/add_beer_btn_confirm"
            a:onClick="submitPrice"
            />
</LinearLayout>